# vtpk-reader

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml
scripts/conda_environments/: conda_vtpk_devel_p309.yml  conda_vtpk_devel_p311.yml  conda_vtpk_test_p309_pip.yml  conda_vtpk_test_p309_pip_bare.yml  conda_vtpk_test_p311_pip.yml
tests/: test_vtpk_reader.py  vtpk_reader_tests.py
tests/test_data/: dodge_city.vtpk  testvtpk.vtpk
vtpk_reader/: __init__.py  vtpk_reader.py
